kubernetes/clusters/homelab/infrastructure/longhorn/config/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  labels:
    external-dns: internal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: >-
      traefik-lan-allowlist@kubernetescrd,
      traefik-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.lan.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.lan.${DOMAIN_NAME}
